[tool.poetry]
name = "stepwise_tacotron"
version = "0.1.1"
description = "Tacotron with stepwise monotonic attention"
authors = ["Thông Nguyễn"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Unidecode = "^1.3.2"
toml = "^0.10.2"
tensorflow = "^2.8.0"
pax3 = "^0.5.5"
opax = "^0.2.8"
jax = "^0.3.0"
jaxlib = "^0.3.0"
matplotlib = "^3.5.1"
librosa = "^0.9.1"
tqdm = "^4.62.3"
pooch = "^1.6.0"
fire = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tacotron]
BATCH_SIZE = 64
LR=1024e-6 # learning rate
MODEL_PREFIX = "mono_tts"
LOG_DIR = "./logs"
CKPT_DIR = "./ckpts"
TF_DATA_DIR = "./tf_data" # tensorflow data directory
SAMPLE_RATE = 22050 # convert to this sample rate if needed
MEL_DIM = 80 # the dimension of melspectrogram features
MEL_MIN = 1e-5
PAD = "_" # padding character
PAD_TOKEN = 0
RR = 2 # reduction factor
MAX_RR=2
ATTN_BIAS = 0.0 # control how slow the attention moves forward
SIGMOID_NOISE = 2.0
TEST_DATA_SIZE = 1024
USE_MP = false  # use mixed-precision training
